// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`argument_comment.graphql 1`] = `
====================================options=====================================
parsers: ["graphql"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================

query (
  $string: String, # Some variable comment
  $bool: Boolean # Some comment
 ) {
   someField
 }

=====================================output=====================================
query(
  $string: String # Some variable comment
  $bool: Boolean # Some comment
) {
  someField
}

================================================================================
`;

exports[`fields.graphql 1`] = `
====================================options=====================================
parsers: ["graphql"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
query { 
  someField # Trailing comment
}



=====================================output=====================================
query {
  someField # Trailing comment
}

================================================================================
`;

exports[`tokens.graphql 1`] = `
====================================options=====================================
parsers: ["graphql"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
# import "./claimsFragment.gql"

query claimsByBookingReferenceAndLastName($bookingReference: String!, $lastName: String!) {
  claimsByBookingReferenceAndLastName(bookingReference: $bookingReference, lastName: $lastName) {
    ... claim
  }
}

=====================================output=====================================
# import "./claimsFragment.gql"

query claimsByBookingReferenceAndLastName(
  $bookingReference: String!
  $lastName: String!
) {
  claimsByBookingReferenceAndLastName(
    bookingReference: $bookingReference
    lastName: $lastName
  ) {
    ...claim
  }
}

================================================================================
`;
